aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__invalid_map_key.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
Map:
  items:
    - - Binary:
          lhs:
            Primitive:
              value:
                Int: 1
              location:
                start_byte: 1
                end_byte: 2
              original: "1"
          rhs:
            Primitive:
              value:
                Int: 2
              location:
                start_byte: 3
                end_byte: 4
              original: "2"
          op: Plus
          location:
            start_byte: 1
            end_byte: 4
          original: 1+2
      - Primitive:
          value:
            Int: 3
          location:
            start_byte: 6
            end_byte: 7
          original: "3"
  location:
    start_byte: 0
    end_byte: 8
  original: "{1+2: 3}"
