aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__map_declaration.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 100
expression: parse(input)
---
Map:
  original: "{a: 1, b: c}"
  items:
    - - Ident:
          value: a
          location:
            start_byte: 1
            end_byte: 2
      - Primitive:
          original: "1"
          value:
            Int: 1
          location:
            start_byte: 4
            end_byte: 5
    - - Ident:
          value: b
          location:
            start_byte: 7
            end_byte: 8
      - Ident:
          value: c
          location:
            start_byte: 10
            end_byte: 11
  location:
    start_byte: 0
    end_byte: 12
