aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__map_lookup.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 64
expression: parse(input)
---
ArrayIndex:
  original: "map['key']"
  lhs:
    Ident:
      value: map
      location:
        start_byte: 0
        end_byte: 3
  index:
    String:
      value: "'key'"
      location:
        start_byte: 4
        end_byte: 9
  location:
    start_byte: 0
    end_byte: 10
