aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__missing_comma_in_function_args.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 148
expression: parse(input)
---
Call:
  original: foo(1 2 3)
  fun:
    Ident:
      value: foo
      location:
        start_byte: 0
        end_byte: 3
  args:
    - Primitive:
        original: "1"
        value:
          Int: 1
        location:
          start_byte: 4
          end_byte: 5
    - Primitive:
        original: "2"
        value:
          Int: 2
        location:
          start_byte: 6
          end_byte: 7
    - Primitive:
        original: "3"
        value:
          Int: 3
        location:
          start_byte: 8
          end_byte: 9
  location:
    start_byte: 0
    end_byte: 10
