aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__missing_left_operand.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 160
expression: parse(input)
---
Error:
  original: "*"
  location:
    start_byte: 0
    end_byte: 1
  token:
    Operator: Mul
