aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__nested_list.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 88
expression: parse(input)
---
List:
  original: "[1, [2, 3, [4, 5]]]"
  items:
    - Primitive:
        original: "1"
        value:
          Int: 1
        location:
          start_byte: 1
          end_byte: 2
    - List:
        original: "[2, 3, [4, 5]]"
        items:
          - Primitive:
              original: "2"
              value:
                Int: 2
              location:
                start_byte: 5
                end_byte: 6
          - Primitive:
              original: "3"
              value:
                Int: 3
              location:
                start_byte: 8
                end_byte: 9
          - List:
              original: "[4, 5]"
              items:
                - Primitive:
                    original: "4"
                    value:
                      Int: 4
                    location:
                      start_byte: 12
                      end_byte: 13
                - Primitive:
                    original: "5"
                    value:
                      Int: 5
                    location:
                      start_byte: 15
                      end_byte: 16
              location:
                start_byte: 11
                end_byte: 17
        location:
          start_byte: 4
          end_byte: 18
  location:
    start_byte: 0
    end_byte: 19
