aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__not.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
Binary:
  lhs:
    Binary:
      lhs:
        Primitive:
          value:
            Int: 1
          location:
            start_byte: 0
            end_byte: 1
          original: "1"
      rhs:
        Primitive:
          value:
            Int: 2
          location:
            start_byte: 5
            end_byte: 6
          original: "2"
      op: NotEqual
      location:
        start_byte: 0
        end_byte: 6
      original: 1 != 2
  rhs:
    Binary:
      lhs:
        Primitive:
          value:
            Int: 3
          location:
            start_byte: 10
            end_byte: 11
          original: "3"
      rhs:
        Primitive:
          value:
            Int: 4
          location:
            start_byte: 15
            end_byte: 16
          original: "4"
      op: NotEqual
      location:
        start_byte: 10
        end_byte: 16
      original: 3 != 4
  op: And
  location:
    start_byte: 0
    end_byte: 16
  original: 1 != 2 && 3 != 4
