aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__simple_div.snap
---
source: aml-syntax/src/expressions/tests.rs
expression: parse(input)
---
Binary:
  lhs:
    Primitive:
      value:
        Int: 5
      location:
        start_byte: 0
        end_byte: 1
      original: "5"
  rhs:
    Binary:
      lhs:
        Primitive:
          value:
            Int: 1
          location:
            start_byte: 4
            end_byte: 5
          original: "1"
      rhs:
        Primitive:
          value:
            Int: 2
          location:
            start_byte: 8
            end_byte: 9
          original: "2"
      op: Div
      location:
        start_byte: 4
        end_byte: 9
      original: 1 / 2
  op: Minus
  location:
    start_byte: 0
    end_byte: 9
  original: 5 - 1 / 2
