aml-syntax/src/expressions/snapshots/aml_syntax__expressions__tests__simple_equality.snap
---
source: aml-syntax/src/expressions/tests.rs
assertion_line: 94
expression: parse(input)
---
Binary:
  original: 1 == 2
  lhs:
    Primitive:
      original: "1"
      value:
        Int: 1
      location:
        start_byte: 0
        end_byte: 1
  rhs:
    Primitive:
      original: "2"
      value:
        Int: 2
      location:
        start_byte: 5
        end_byte: 6
  op: EqualEqual
  location:
    start_byte: 0
    end_byte: 6
